Updated Permutation Test.